--- a/backend/package.json
+++ b/backend/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "main": "dist/server.js",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "tsx watch --inspect=9229 src/server.ts",
     "build": "tsc",
     "format": "prettier --write .",
     "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
+  "type": "module",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/morgan": "^1.9.10",
     "@types/node": "^25.0.3",
@@ -29,12 +31,14 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@google/genai": "^1.34.0",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "pg": "^8.16.3",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^3.25.76"
   }
 }
